enhancement: added animation and hovers to PlanWidget

--- a/src/Features/Dashboard/PlanWidget/Components/PlanTable/PlanTable.module.scss
+++ b/src/Features/Dashboard/PlanWidget/Components/PlanTable/PlanTable.module.scss
@@ -5,6 +5,40 @@
 	flex-direction: column;
 	gap: 12px;
 	overflow: hidden;
+	width: 100%;
+	box-sizing: border-box;
+}
+
+.PlanTable-section.PlanTable-section-animate {
+	animation: fadeIn 1s ease-out forwards;
+}
+
+@keyframes slideOutAndIn {
+	0% {
+		transform: translateX(0%);
+		opacity: 1;
+	}
+	49% {
+		transform: translateX(110%);
+		opacity: 0;
+	}
+	50% {
+		transform: translateX(-110%);
+		opacity: 0;
+	}
+	100% {
+		transform: translateX(0%);
+		opacity: 1;
+	}
+}
+
+@keyframes fadeIn {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
 }
 
 .PlanTable-list {
