--- a/src/Features/Dashboard/PlanWidget/Components/PlanRow/PlanRow.module.scss
+++ b/src/Features/Dashboard/PlanWidget/Components/PlanRow/PlanRow.module.scss
@@ -10,9 +10,13 @@
 	border-left: 1px solid rgba(240, 241, 240, 1);
 	border-bottom: 1px solid rgba(240, 241, 240, 1);
 	position: relative;
+	box-sizing: border-box;
+	transition: all 0.3s ease;
+	cursor: pointer;
 
 	&:hover {
 		border-color: rgba(204, 223, 245, 1);
+		box-shadow: 10px 4px 6px rgba(0, 0, 0, 0.1);
 
 		&::after {
 			border-color: rgba(59, 141, 245, 1);
