--- a/src/Features/Dashboard/PlanWidget/Components/Tabs/Tabs.module.scss
+++ b/src/Features/Dashboard/PlanWidget/Components/Tabs/Tabs.module.scss
@@ -71,6 +71,7 @@
 	align-items: center;
 
 	padding: 6px 50px 3px 20px;
+	margin-left: -1px;
 	font-size: 16px;
 	font-weight: 500;
 	line-height: 24px;
