--- a/src/App/Styles/Global.scss
+++ b/src/App/Styles/Global.scss
@@ -2,7 +2,7 @@
 	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 	line-height: 1.5;
 	font-weight: 400;
-	color-scheme: light dark;
+	// color-scheme: light dark;
 	color: rgba(0, 0, 0, 0.87);
 	background-color: #ffffff;
 	font-synthesis: none;
@@ -57,15 +57,15 @@ button:hover {
 	border-color: #646cff;
 }
 
-@media (prefers-color-scheme: light) {
-	:root {
-		color: #213547;
-		background-color: #ffffff;
-	}
-	a:hover {
-		color: #747bff;
-	}
-	button {
-		background-color: #f9f9f9;
-	}
-}
+// @media (prefers-color-scheme: light) {
+// 	:root {
+// 		color: #213547;
+// 		background-color: #ffffff;
+// 	}
+// 	a:hover {
+// 		color: #747bff;
+// 	}
+// 	button {
+// 		background-color: #f9f9f9;
+// 	}
+// }
