fix: update the login page

--- a/src/Views/Auth/Login/Login.module.scss
+++ b/src/Views/Auth/Login/Login.module.scss
@@ -18,6 +18,7 @@
 	&-left {
 		flex: 1;
 		position: relative;
+		animation: moveUpFadeIn 1s cubic-bezier(0.25, 0.8, 0.25, 1) forwards;
 
 		&-background {
 			width: auto;
@@ -53,115 +54,30 @@
 		justify-content: center;
 		align-items: center;
 		background-color: white;
-	}
-
-	&-form {
-		width: 60%;
-		text-align: center;
-		display: flex;
-		flex-direction: column;
-		gap: 8px;
-
-		&-title {
-			h2 {
-				text-align: center;
-				font-size: 24px;
-				margin-bottom: 4px !important;
-			}
-
-			h4 {
-				font-size: 16px;
-				opacity: 0.5;
-				margin-top: -8px !important;
-			}
-		}
-
-		&-inputs {
-			display: flex;
-			flex-direction: column;
-			gap: 4px;
-			margin-top: 12px;
-
-			input {
-				padding: 12px;
-				padding-left: 15px;
-				margin-top: 5px;
-				border-radius: 30px;
-				border: 1px solid #ddd;
-				font-size: 16px;
-			}
-
-			&-password-wrapper {
-				position: relative;
-				width: 100%;
-				display: flex;
-				align-items: center;
-
-				input {
-					width: 100%;
-					padding: 12px;
-					padding-left: 15px;
-					margin-top: 5px;
-					border-radius: 30px;
-					border: 1px solid #ddd;
-					font-size: 16px;
-				}
-			}
-
-			&-password-hidden {
-				position: absolute;
-				right: 12px;
-				top: 58%;
-				transform: translateY(-50%);
-				cursor: pointer;
-			}
-		}
-
-		&-forgot-password {
-			font-size: 16px;
-			margin-top: 4px;
-			display: flex;
-			justify-content: flex-end;
-
-			a {
-				color: #00aaff;
-			}
-		}
-
-		&-signup {
-			text-align: center;
-			margin-top: 20px;
-
-			p {
-				font-size: 14px;
-			}
-
-			a {
-				color: #00aaff;
-			}
-		}
-
-		&-signin-button {
-			margin-top: 20px;
-			background-color: #1f1f1f;
-			color: white;
-			border: none;
-			border-radius: 20px;
-			font-size: 16px;
-			cursor: pointer;
-			transition: background-color 0.3s ease;
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			gap: 4px;
-
-			&:hover {
-				background-color: #0088cc;
-			}
-		}
+		animation: fadeIn 1s ease-in forwards;
 	}
 
 	@media (max-width: 920px) {
 		flex-direction: column;
+	}
+}
+
+@keyframes moveUpFadeIn {
+	0% {
+		opacity: 0;
+		transform: translateY(80px);
+	}
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
+@keyframes fadeIn {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
 	}
 }
