fix: update the select configuration

--- a/src/Features/Onboarding/UploadMethod/Components/ConfigItemCard/ConfirmCard.module.scss
+++ b/src/Features/Onboarding/UploadMethod/Components/ConfigItemCard/ConfirmCard.module.scss
@@ -22,14 +22,21 @@
 
 .config-item-card {
 	cursor: pointer;
-	width: 349px;
-	height: 148px;
+	width: 406px;
+	height: 160px;
 	padding: 24px 24px var(--space-32-px-2-rem, 32px) 24px;
 	border-radius: var(--8-px-05-rem, 8px);
 	border: 1px solid rgba(228, 235, 249, 0.5);
 	background: #e4ebf9;
 	backdrop-filter: blur(4px);
 	animation: fadeIn 1s ease forwards;
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	transition:
+		box-shadow 0.3s ease,
+		border-radius 0.3s ease,
+		background 0.3s ease;
 }
 
 @keyframes fadeIn {
@@ -45,6 +52,14 @@
 	border-radius: var(--8-px-05-rem, 8px);
 	border: 1px solid rgba(165, 188, 230, 0.5);
 	background: var(--neutral-background-background-base, #fff);
+
+	box-shadow:
+		var(--Elevations-sm-1-X, 0px) var(--Elevations-sm-1-Y, 2px)
+			var(--Elevations-sm-1-Blur, 2px) var(--Elevations-sm-1-Spread, 0px)
+			rgba(19, 22, 29, 0.06),
+		var(--Elevations-sm-2-X, 0px) var(--Elevations-sm-2-Y, 2px)
+			var(--Elevations-sm-2-Blur, 4px) var(--Elevations-sm-2-Spread, 1px)
+			rgba(19, 22, 29, 0.04);
 }
 
 .item-card-icon-wrapper {
@@ -69,23 +84,32 @@
 	);
 }
 
+.item-card-info {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	gap: 8px;
+	align-self: stretch;
+}
+
 .item-card-title {
-	color: var(--Neutral-text, #0b101a);
+	color: var(--p-color-text, rgba(33, 38, 46, 1));
+
 	font-family: var(--font-family-title, Inter);
 	font-size: var(--font-size-2xl, 20px);
 	font-style: normal;
 	font-weight: var(--font-weight-semibold-600, 600);
-	line-height: var(--font-line-hight-xl, 24px);
+	line-height: var(--font-line-hight-xl, 24px); /* 120% */
 	letter-spacing: -0.4px;
-	padding: 8px 0px;
 }
 
 .item-card-content {
-	color: var(--Neutral-text-weak, #5f6877);
+	color: var(--p-color-text, rgba(81, 89, 103, 1));
+
 	font-family: var(--font-family-title, Inter);
 	font-size: var(--font-size-xl, 16px);
 	font-style: normal;
-	font-weight: 400;
+	font-weight: var(--font-weight-light-400, 400);
 	line-height: var(--font-line-hight-lg, 20px);
 	letter-spacing: -0.16px;
 }
