--- a/src/Features/Onboarding/ConnectAppDevice/AppDevice/Components/AppCard/AppCard.module.scss
+++ b/src/Features/Onboarding/ConnectAppDevice/AppDevice/Components/AppCard/AppCard.module.scss
@@ -4,15 +4,18 @@
 	padding: var(--space-20-px-125-rem, 20px);
 	flex-direction: column;
 	align-items: flex-start;
-	gap: var(--space-8-px-05-rem, 8px);
+	gap: var(--space-8-px-05-rem, 16px);
 	flex: 1 0 0;
 	border-radius: var(--Font-size-3XS, 8px);
 	border: 1px solid #dae4f6;
 	background: linear-gradient(341deg, #fff -18.27%, #fff 45.59%);
+	transition:
+		border-radius 0.3s ease,
+		border 0.3s ease,
+		background 0.3s ease;
 }
 
 .app-card-container:hover {
-	border-radius: var(--Font-size-S, 14px);
 	border: 1px solid #a5bce6;
 	background: #e4ebf9;
 }
@@ -45,12 +48,25 @@
 		background: var(--p-color-bg-fill-magic, rgba(59, 141, 245, 1));
 		color: var(--p-color-text-magic-on-bg-fill, rgba(255, 255, 255, 1));
 
-		/* body/md/semibold */
 		font-family: var(--Font-family-body, Inter);
 		font-size: var(--Font-size-S, 14px);
 		font-style: normal;
 		font-weight: 600;
-		line-height: var(--Font-line-height-M, 20px); /* 142.857% */
+		line-height: var(--Font-line-height-M, 20px);
+	}
+
+	.connect-btn:hover {
+		background: var(
+			--p-color-bg-fill-magic-secondary-hover,
+			rgba(0, 89, 219, 1)
+		);
+	}
+
+	.connect-btn:active {
+		background: var(
+			--p-color-bg-fill-magic-secondary-active,
+			rgba(0, 65, 196, 1)
+		);
 	}
 }
 
@@ -60,6 +76,7 @@
 	align-items: flex-start;
 	gap: var(--space-4-px-025-rem, 4px);
 	align-self: stretch;
+	position: relative;
 
 	.title {
 		align-self: stretch;
@@ -82,5 +99,42 @@
 		font-weight: var(--font-weight-light-400, 400);
 		line-height: var(--font-line-hight-lg, 20px);
 		letter-spacing: -0.16px;
+	}
+
+	.favorite {
+		position: absolute;
+		right: 0;
+		bottom: 0;
+		display: flex;
+		padding: var(---Buttons-and-Inputs-md-p, 8px);
+		justify-content: center;
+		align-items: center;
+		gap: var(---Buttons-and-Inputs-gap, 8px);
+		border-radius: var(
+			---Buttons-and-Inputs-button-border-radius-primary,
+			999px
+		);
+		border: var(--Border-Width-thick, 1px) solid
+			var(--p-color-border-magic, rgba(59, 141, 245, 1));
+	}
+
+	.favorite:hover {
+		background: var(
+			--p-color-bg-fill-magic-secondary-hover,
+			rgba(59, 141, 245, 0.16)
+		);
+	}
+
+	.favorite:active {
+		border-radius: var(
+			---Buttons-and-Inputs-button-border-radius-primary,
+			999px
+		);
+		border: var(--Border-Width-thick, 1px) solid
+			var(--p-color-icon-emphasis-hover, rgba(0, 65, 196, 1));
+		background: var(
+			--p-color-bg-fill-magic-secondary-active,
+			rgba(59, 141, 245, 0.24)
+		);
 	}
 }
