--- a/src/Features/Dashboard/AgeWidget/Components/AgeSlider/AgeSlider.module.scss
+++ b/src/Features/Dashboard/AgeWidget/Components/AgeSlider/AgeSlider.module.scss
@@ -1,3 +1,5 @@
+@use "@/App/Styles/_mixins" as *;
+
 .AgeSlider-container {
 	display: flex;
 	flex-direction: column;
@@ -20,7 +22,11 @@
 	font-weight: 500;
 	line-height: 16px;
 	width: 100%;
-	text-align: center;
+	text-align: left;
+
+	@include media_1439 {
+		text-align: center;
+	}
 }
 
 .AgeSlider-bar-wrapper {
@@ -31,6 +37,7 @@
 	border-radius: 24px;
 	overflow: hidden;
 	position: relative;
+	background: rgba(211, 222, 248, 0.63);
 }
 
 .AgeSlider-bar-wrapper::before {
@@ -47,7 +54,7 @@
 	position: absolute;
 	inset: 0;
 	border-radius: 24px;
-	padding: 2px;
+	padding: 1px;
 	background: linear-gradient(
 		270deg,
 		#ff7bd2 6.69%,
@@ -77,7 +84,7 @@
 	position: absolute;
 	height: 100%;
 
-	background: linear-gradient(270deg, #0974fb 49.8%, #5ccdff 100%);
+	background: linear-gradient(270deg, #0974fb 0%, #5ccdff 100%);
 	left: 0;
 	top: 0;
 	border-radius: 24px 0 0 24px;
@@ -105,7 +112,8 @@
 	position: relative;
 	height: 1px;
 	width: calc(100% - 30px);
-	background-color: white;
+	background: linear-gradient(to right, white 0%, #c2d3f3 48.78%);
+	opacity: 0.6;
 }
 
 .AgeSlider-thumb {
@@ -149,16 +157,26 @@
 	display: flex;
 	justify-content: space-between;
 	width: 100%;
-	font-size: 12px;
-	color: #0b101a;
 }
 
 .AgeSlider-axis-label {
+	color: #0b101a;
 	text-align: center;
-	font-weight: 400;
 	font-size: 14px;
+	font-weight: 400;
 	line-height: 16px;
 	opacity: 0.4;
+
+	&-median {
+		opacity: 1;
+	}
+	&:first-child {
+		opacity: 0.6;
+	}
+
+	&:nth-last-child(-n + 2) {
+		opacity: 0.6;
+	}
 }
 
 .AgeSlider-axis-label:nth-child(2n) {
