--- a/src/Features/Onboarding/Upload/Components/UploadItem/UploadItem.module.scss
+++ b/src/Features/Onboarding/Upload/Components/UploadItem/UploadItem.module.scss
@@ -9,8 +9,6 @@
 		box-shadow 0.3s ease,
 		background-color 0.3s ease;
 
-	animation: fadeInUp 0.6s ease-out;
-
 	.header {
 		display: flex;
 		padding: var(--space-16-px-1-rem, 16px) 0px var(--space-8-px-05-rem, 8px)
@@ -86,47 +84,101 @@
 			}
 		}
 
-		.browse-files-btn {
+		.actions {
 			display: flex;
-			padding: var(---Buttons-and-Inputs-md-py, 8px)
-				var(---Buttons-and-Inputs-md-px, 12px);
-			justify-content: center;
+			gap: 16px;
 			align-items: center;
-			gap: var(---Buttons-and-Inputs-gap, 8px);
-			border-radius: var(
-				---Buttons-and-Inputs-button-border-radius-primary,
-				999px
-			);
-			border: var(--Border-Width-thick, 1px) solid #5188d1;
-			color: #2660a8;
 
-			font-family: var(--Font-family-body, Inter);
-			font-size: var(--Font-size-S, 14px);
-			font-style: normal;
-			font-weight: 600;
-			line-height: var(--Font-line-height-M, 20px);
-			transition:
-				background-color 0.2s ease,
-				transform 0.3s ease;
-			&:hover {
-				background-color: rgba(81, 136, 209, 0.1);
-				transform: scale(1.05);
+			.switch-container {
+				display: flex;
+				height: var(--buttons-inputs-height-m-regular, 36px);
+				padding: 2px;
+				align-items: center;
+				border-radius: var(--buttons-inputs-height-3-xs, 16px);
+				background: var(--Neutral-background, rgba(95, 104, 119, 0.08));
+				flex-direction: row;
+
+				.switch-item {
+					display: flex;
+					padding: 4px 8px;
+					justify-content: center;
+					align-items: center;
+					align-self: stretch;
+					border-radius: var(--segment-control-radius-inside-M---Regular, 20px);
+					color: var(--Neutral-text-weak, #5f6877);
+					cursor: pointer;
+					text-align: center;
+
+					font-family: var(--font-family-body, Inter);
+					font-size: var(--font-size-lg, 14px);
+					font-style: normal;
+					font-weight: var(--font-weight-medium-500, 500);
+					line-height: var(--font-line-hight-lg, 20px);
+
+					span {
+						padding: 0 8px;
+					}
+				}
+
+				.selected-switch-item {
+					border-radius: var(--layout-sign-in_up-radius, 16px);
+					background: var(--Neutral-background-base, #fff);
+
+					box-shadow:
+						0px 2px 2px 0px rgba(20, 28, 44, 0.04),
+						0px 2px 4px 1px rgba(20, 28, 44, 0.04);
+				}
+			}
+
+			.browse-files-btn {
+				display: flex;
+				padding: var(---Buttons-and-Inputs-md-py, 8px)
+					var(---Buttons-and-Inputs-md-px, 12px);
+				justify-content: center;
+				align-items: center;
+				gap: var(---Buttons-and-Inputs-gap, 8px);
+				border-radius: var(
+					---Buttons-and-Inputs-button-border-radius-primary,
+					999px
+				);
+				border: var(--Border-Width-thick, 1px) solid
+					var(--p-color-border-magic, rgba(59, 141, 245, 1));
+				background-color: white;
+
+				color: var(--p-color-text-magic, rgba(0, 65, 196, 1));
+
+				font-family: var(--Font-family-body, Inter);
+				font-size: var(--Font-size-XS, 12px);
+				font-style: normal;
+				font-weight: 600;
+				line-height: var(--Font-line-height-S, 16px);
+
+				&:hover {
+					border-radius: var(
+						---Buttons-and-Inputs-button-border-radius-primary,
+						999px
+					);
+					border: var(--Border-Width-thick, 1px) solid
+						var(--p-color-border-focus, rgba(59, 141, 245, 1));
+					background: var(
+						--p-color-bg-fill-magic-secondary-hover,
+						rgba(59, 141, 245, 0.16)
+					);
+				}
+
+				&:active {
+					border-radius: var(
+						---Buttons-and-Inputs-button-border-radius-primary,
+						999px
+					);
+					border: var(--Border-Width-thick, 1px) solid
+						var(--p-color-icon-emphasis-hover, rgba(0, 65, 196, 1));
+					background: var(
+						--p-color-bg-fill-magic-secondary-active,
+						rgba(59, 141, 245, 0.24)
+					);
+				}
 			}
 		}
-	}
-}
-
-@keyframes fadeInUp {
-	0% {
-		opacity: 0;
-		transform: translateY(20px);
-	}
-	60% {
-		opacity: 1;
-		transform: translateY(-10px);
-	}
-	100% {
-		opacity: 1;
-		transform: translateY(0);
 	}
 }
