--- a/src/Features/Dashboard/ConcernsWidget/Components/DetailsCard/DetailsCard.module.scss
+++ b/src/Features/Dashboard/ConcernsWidget/Components/DetailsCard/DetailsCard.module.scss
@@ -3,19 +3,24 @@
 .DetailsCard-card {
 	display: flex;
 	flex-direction: column;
-	gap: 12px;
+	gap: 6px;
 	border-radius: 8px;
 	padding: 12px;
-	background: linear-gradient(0deg, #f7f9fc, #f7f9fc);
+	background: linear-gradient(293deg, rgba(255, 255, 255, 0.7) 0.1%, #fff 100%);
 	border: 1px solid #ffffff;
 	transition: all 0.3s ease;
 	cursor: pointer;
 
+	position: relative;
+
 	&:hover {
-		border: 1px solid rgba(148, 178, 236, 0.5);
 		box-shadow:
 			0px 2px 12px 1px rgba(20, 28, 44, 0.12),
 			0px 2px 4px 0px rgba(20, 28, 44, 0.12);
+
+		.DetailsCard-question-container {
+			opacity: 1;
+		}
 	}
 
 	&-active {
@@ -31,7 +36,7 @@
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
-	height: 32px;
+	height: 20px;
 }
 
 .DetailsCard-icon-container {
@@ -127,7 +132,7 @@
 .DetailsCard-body {
 	display: flex;
 	flex-direction: column;
-	gap: 4px;
+	gap: 2px;
 }
 
 .DetailsCard-body-description {
@@ -164,9 +169,9 @@
 .DetailsCard-custom-checkbox {
 	width: 16px;
 	height: 16px;
-	border: 2px solid #d1d5db;
+	border: 0px solid #d1d5db;
 	border-radius: 100%;
-	background-color: #ffffff;
+	background-color: inherit;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -188,4 +193,23 @@
 
 .DetailsCard-checkbox-container:hover .DetailsCard-custom-checkbox {
 	border-color: #2563eb;
+}
+
+.DetailsCard-question-container {
+	transition: all 0.3s ease;
+	opacity: 0;
+	position: absolute;
+	width: 100%;
+	height: 28px;
+	bottom: 12px;
+	right: 12px;
+	background: linear-gradient(270deg, #fff 0%, rgba(255, 255, 255, 0) 90%);
+}
+
+.DetailsCard-question {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	height: 16px;
+	width: 16px;
 }
