--- a/src/Features/Dashboard/ConcernsWidget/ConcernsWidget.module.scss
+++ b/src/Features/Dashboard/ConcernsWidget/ConcernsWidget.module.scss
@@ -21,38 +21,18 @@
 	color: #0b101a;
 	position: relative;
 	overflow: hidden;
-	border-left: 1px solid rgba(149, 179, 233, 1);
-	border-top: 1px solid rgba(149, 179, 233, 1);
 	background-color: #e4ebf9;
 }
-
-// .ConcernWidget-tab::before {
-// 	content: "";
-// 	position: absolute;
-// 	top: 0;
-// 	right: -1%;
-// 	width: 42px;
-// 	height: 32px;
-// 	background-color: white;
-// 	rotate: (180deg);
-// 	clip-path: path(
-// 		"M27.6765 26.1497C29.6509 29.1127 32.4968 31.3123 35.75 32.5H0.5V0.5H2.28706C7.47069 0.5 12.3112 3.09122 15.1857 7.40487L27.6765 26.1497Z"
-// 	);
-// }
 
 .ConcernWidget-tab-container {
 	display: flex;
 	flex-direction: row;
 	position: relative;
+}
 
-	&::after {
-		content: "";
-		position: absolute;
-		left: 1px;
-		bottom: -1px;
-		width: calc(100% - 1px);
-		height: 1px;
-		background-color: #e4ebf9;
+.ConcernWidget-slope {
+	path {
+		height: 34px;
 	}
 }
 
@@ -65,9 +45,9 @@
 }
 
 .ConcernWidget-more-text {
-	font-size: 12px;
+	font-size: 14px;
 	font-weight: 600;
-	line-height: 16px;
+	line-height: 20px;
 	color: #3b8df5;
 	margin: 0 auto;
 }
@@ -100,9 +80,8 @@
 	flex-direction: column;
 	gap: 16px;
 	background-color: #e4ebf9;
-	padding: 10px 14px;
+	padding: 16px;
 	border-radius: 0px 8px 8px 8px;
-	border: 1px solid rgba(149, 179, 233, 1);
 	overflow: hidden;
 
 	box-sizing: border-box;
