fix: update the confirm modal

--- a/src/Features/Onboarding/ConfirmModal/ConfirmModal.module.scss
+++ b/src/Features/Onboarding/ConfirmModal/ConfirmModal.module.scss
@@ -9,9 +9,6 @@
 	box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 	top: 0;
 	left: 0;
-
-	/* Fade-in animation for modal appearance */
-	animation: fadeIn 0.6s ease-out;
 }
 
 .modal-body {
@@ -30,6 +27,7 @@
 		0px 7.371px 10.498px 0px rgba(0, 72, 115, 0.04),
 		0px 2.195px 3.126px 0px rgba(0, 72, 115, 0.03);
 	position: relative;
+	animation: slideInFromTop 0.3s ease-out;
 }
 
 .modal-content {
@@ -68,6 +66,9 @@
 	font-weight: var(--font-weight-light-400, 400);
 	line-height: var(--font-line-hight-2xl, 32px);
 	letter-spacing: -0.48px;
+	animation: fadeIn 0.4s ease-out;
+	animation-delay: 0.2s;
+	animation-fill-mode: both;
 }
 
 .modal-title-emphasize {
@@ -90,6 +91,9 @@
 	font-style: normal;
 	font-weight: 400;
 	line-height: var(--Font-line-height-M, 20px);
+	animation: fadeIn 0.4s ease-out;
+	animation-delay: 0.4s; /* Stagger delay */
+	animation-fill-mode: both;
 }
 
 .modal-policy {
@@ -104,6 +108,9 @@
 	font-style: normal;
 	font-weight: 400;
 	line-height: var(--Font-line-height-M, 20px);
+	animation: fadeIn 0.4s ease-out;
+	animation-delay: 0.6s; /* Stagger delay */
+	animation-fill-mode: both;
 }
 
 .modal-policy-checkbox {
@@ -121,6 +128,9 @@
 	justify-content: space-between;
 	gap: 16px;
 	align-self: stretch;
+	animation: fadeIn 0.4s ease-out;
+	animation-delay: 0.8s;
+	animation-fill-mode: both;
 
 	button {
 		display: flex;
@@ -135,21 +145,98 @@
 		transition:
 			transform 0.2s ease,
 			background-color 0.3s ease;
-
-		&:hover {
-			transform: scale(1.05);
-		}
 	}
 
 	.cancel {
 		border: 1px solid #bfc3c1;
 		background: rgba(255, 255, 255, 0.12);
 		color: rgba(33, 38, 46, 1);
+
+		&:hover {
+			border-radius: var(
+				---Buttons-and-Inputs-button-border-radius-primary,
+				999px
+			);
+			border: 1px solid var(--Text-weaker, #bfc3c1);
+			background: var(
+				--p-color-bg-fill-transparent-hover,
+				rgba(246, 246, 248, 1)
+			);
+		}
+
+		&:active {
+			border-radius: var(
+				---Buttons-and-Inputs-button-border-radius-primary,
+				999px
+			);
+			border: 1px solid var(--Text-weaker, #bfc3c1);
+			background: var(
+				--p-color-bg-fill-transparent-active,
+				rgba(108, 117, 132, 0.2)
+			);
+		}
 	}
 
 	.confirm {
-		background: #1f1f1f;
 		color: rgba(239, 240, 241, 1);
+		border-radius: var(
+			---Buttons-and-Inputs-button-border-radius-primary,
+			999px
+		);
+		border: none;
+
+		&:hover {
+			border-radius: var(
+				---Buttons-and-Inputs-button-border-radius-primary,
+				999px
+			);
+			background: var(--p-color-bg-fill-inverse-active, rgba(54, 60, 71, 1));
+		}
+
+		&:active {
+			border-radius: var(
+				---Buttons-and-Inputs-button-border-radius-primary,
+				999px
+			);
+			background: var(--p-color-bg-fill-inverse, rgba(33, 38, 46, 1));
+		}
+	}
+
+	.confirm-disabled {
+		background: var(--p-color-bg-fill-transparent, rgba(108, 117, 132, 0.12));
+		color: var(--p-color-text-disabled, rgba(143, 149, 160, 1));
+
+		font-family: var(--Font-family-body, Inter);
+		font-size: var(--Font-size-S, 14px);
+		font-style: normal;
+		font-weight: 600;
+		line-height: var(--Font-line-height-M, 20px); /* 142.857% */
+
+		&:hover {
+			background: var(--p-color-bg-fill-transparent, rgba(108, 117, 132, 0.12));
+		}
+	}
+}
+
+@keyframes slideInFromTop {
+	0% {
+		transform: translateY(-200px);
+		opacity: 0;
+	}
+	100% {
+		transform: translateY(0);
+		opacity: 1;
+	}
+}
+
+@keyframes slideInFromLeft {
+	0% {
+		transform: translateY(-200px);
+		opacity: 0;
+	}
+	100% {
+		transform: translateY(0);
+		opacity: 1;
 	}
 }
 
@@ -160,23 +247,4 @@
 	100% {
 		opacity: 1;
 	}
-}
-
-@keyframes slideIn {
-	0% {
-		transform: translateY(-20px);
-		opacity: 0;
-	}
-	100% {
-		transform: translateY(0);
-		opacity: 1;
-	}
-}
-
-.modal-policy-checkbox:checked {
-	transform: scale(1.1);
-}
-
-.modal-policy-checkbox:hover {
-	transform: scale(1.1);
 }
