--- a/src/Features/Structural/NavBar/Components/ManageData/ManageData.module.scss
+++ b/src/Features/Structural/NavBar/Components/ManageData/ManageData.module.scss
@@ -1,16 +1,13 @@
 .ManageData {
 	display: flex;
-	padding: 8px;
+	padding: 8px 16px;
 	justify-content: center;
 	align-items: center;
 
 	border-radius: 99px;
 	border: 1px solid rgba(95, 104, 119, 0.1);
-	background: rgba(255, 255, 255, 0.04);
+	background: rgba(231, 233, 236, 0.40);
 
-	backdrop-filter: blur(1px);
-
-	background: rgba(255, 255, 255, 0.04);
 	backdrop-filter: blur(1px);
 
 	p {
@@ -26,8 +23,8 @@
 		justify-content: center;
 		align-items: center;
 		// background-color: #6c75841f;
-		background-color: white;
-		border-radius: 100%;
+		background: rgba(231, 233, 236, 0.10);
+		border: none;
 		margin-right: 6px;
 	}
 }
