--- a/src/Features/Structural/NavBar/Components/ManageData/ManageData.module.scss
+++ b/src/Features/Structural/NavBar/Components/ManageData/ManageData.module.scss
@@ -1,30 +1,30 @@
 .ManageData {
-	display: flex;
-	padding: 8px 16px;
-	justify-content: center;
-	align-items: center;
+  display: flex;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border-radius: 99px;
+  border: 1px solid rgba(95, 104, 119, 0.1);
+  background: rgba(231, 233, 236, 0.40);
 
-	border-radius: 99px;
-	border: 1px solid rgba(95, 104, 119, 0.1);
-	background: rgba(231, 233, 236, 0.40);
+  backdrop-filter: blur(1px);
 
-	backdrop-filter: blur(1px);
+  p {
+    line-height: 16px;
+    font-size: 14px;
+    font-weight: 500;
+    margin: 0;
+  }
 
-	p {
-		line-height: 16px;
-		font-size: 14px;
-		font-weight: 500;
-		margin: 0;
-	}
-
-	.icon-button {
-		display: flex;
-		padding: 4px;
-		justify-content: center;
-		align-items: center;
-		// background-color: #6c75841f;
-		background: rgba(231, 233, 236, 0.10);
-		border: none;
-		margin-right: 6px;
-	}
+  .icon-button {
+    display: flex;
+    padding: 4px;
+    justify-content: center;
+    align-items: center;
+    // background-color: #6c75841f;
+    background: rgba(231, 233, 236, 0.10);
+    border: none;
+    margin-right: 6px;
+  }
 }
