--- a/src/Views/DetailedRisk/DetailedRisk.module.scss
+++ b/src/Views/DetailedRisk/DetailedRisk.module.scss
@@ -103,3 +103,15 @@
 		opacity: 1;
 	}
 }
+.breadcrumbs {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	font-size: 14px;
+}
+
+.homeIcon {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
