--- a/src/Views/DetailedRisk/DetailedRisk.module.scss
+++ b/src/Views/DetailedRisk/DetailedRisk.module.scss
@@ -2,9 +2,6 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
-	height: 100vh;
-	width: 100vw;
-	overflow: hidden;
 }
 
 .DetailerRisk-dt-container {
@@ -33,13 +30,55 @@
 	position: relative;
 }
 
+.DetailerRisk-plan {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	gap: 16px;
+	align-self: stretch;
+
+	.title {
+		color: var(--p-color-text, rgba(33, 38, 46, 1));
+
+		font-family: var(--Font-family-heading, Inter);
+		font-size: var(--Font-size-L, 18px);
+		font-style: normal;
+		font-weight: 600;
+		line-height: var(--Font-line-height-XL, 28px);
+	}
+}
+
 .DetailerRisk-stats {
 	display: flex;
 	flex-direction: column;
-	gap: 16px;
-	width: 51%;
-	height: fit-content;
-	padding-bottom: 24px;
+	align-items: flex-start;
+	gap: 32px;
+	align-self: stretch;
+	flex: 1;
+	overflow-x: hidden;
+	overflow-y: auto;
+
+	padding-right: 24px;
+
+	&::-webkit-scrollbar {
+		width: 6px;
+	}
+
+	&::-webkit-scrollbar-track {
+		background-color: #f0f0f0;
+		border-radius: 4px;
+	}
+
+	&::-webkit-scrollbar-thumb {
+		background-color: rgba(52, 120, 246, 0.5);
+		border-radius: 4px;
+
+		box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+	}
+
+	&::-webkit-scrollbar-thumb:hover {
+		background-color: rgba(20, 89, 219, 0.5);
+	}
 
 	&.animate > * {
 		animation: slideOutAndIn 1.5s ease-out forwards;
@@ -55,6 +94,66 @@
 	@for $i from 1 through 10 {
 		> *:nth-child(#{$i}) {
 			animation-delay: calc(0s + ($i - 1) * 0.12s);
+		}
+	}
+}
+
+.DetailerRisk-twin {
+	display: flex;
+	flex-direction: column;
+	gap: 16px;
+	flex: 1;
+}
+
+.DetailerRisk-header {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	gap: 32px;
+	align-self: stretch;
+}
+
+.DetailerRisk-breadcrumb {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	gap: 16px;
+	align-self: stretch;
+}
+
+.DetailerRisk-age {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	gap: 16px;
+	align-self: stretch;
+
+	&-content {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		gap: 4px;
+		align-self: stretch;
+
+		&-title {
+			color: var(--p-color-text, rgba(33, 38, 46, 1));
+
+			font-family: var(--Font-family-heading, Inter);
+			font-size: var(--Font-size-L, 18px);
+			font-style: normal;
+			font-weight: 600;
+			line-height: var(--Font-line-height-XL, 28px);
+		}
+
+		&-desc {
+			color: var(--p-color-text, rgba(81, 89, 103, 1));
+
+			/* body/md/regular */
+			font-family: var(--Font-family-body, Inter);
+			font-size: var(--Font-size-S, 14px);
+			font-style: normal;
+			font-weight: 400;
+			line-height: var(--Font-line-height-M, 20px); /* 142.857% */
 		}
 	}
 }
