--- a/src/Views/SystemOverview/SystemOverview.module.scss
+++ b/src/Views/SystemOverview/SystemOverview.module.scss
@@ -23,6 +23,7 @@
 	width: 100%;
 	height: calc(100vh - 60px);
 	box-sizing: border-box;
+
 	@media (max-width: 920px) {
 		flex-direction: column;
 	}
@@ -37,23 +38,54 @@
 .SystemOverview-stats {
 	display: flex;
 	flex-direction: column;
-	gap: 16px;
+	gap: 32px;
 	width: 51%;
-	height: fit-content;
-	padding-bottom: 24px;
+	height: 100%;
+	padding-bottom: 0;
+	padding-left: 4px;
+	overflow-x: hidden;
+	overflow-y: auto;
+
 	&.animate > * {
 		animation: slideOutAndIn 1.5s ease-out forwards;
 	}
+
 	@media (max-width: 920px) {
 		width: 100%;
 		&.animate > * {
 			animation: slideOutAndInMobile 1.5s ease-out forwards;
 		}
 	}
+
 	@for $i from 1 through 10 {
 		> *:nth-child(#{$i}) {
 			animation-delay: calc(0s + ($i - 1) * 0.12s);
 		}
+	}
+
+	direction: rtl;
+
+	> * {
+		direction: ltr;
+	}
+
+	&::-webkit-scrollbar {
+		width: 3px;
+	}
+
+	&::-webkit-scrollbar-track {
+		background-color: #f0f0f0;
+		border-radius: 4px;
+	}
+
+	&::-webkit-scrollbar-thumb {
+		background-color: rgba(52, 120, 246, 0.5);
+		border-radius: 4px;
+		box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+	}
+
+	&::-webkit-scrollbar-thumb:hover {
+		background-color: rgba(20, 89, 219, 0.5);
 	}
 }
 
@@ -100,4 +132,48 @@
 		transform: translateX(0);
 		opacity: 1;
 	}
+}
+
+.SystemOverview-title {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+}
+
+.SystemOverview-title {
+	color: rgba(33, 38, 46, 1);
+	font-size: 24px;
+	font-weight: 600;
+	line-height: 32px;
+	margin: 0;
+}
+
+.SystemOverview-widget-wrapper {
+	display: flex;
+	flex-direction: column;
+	gap: 16px;
+	align-self: stretch;
+}
+
+.SystemOverview-widget-head {
+	display: flex;
+	flex-direction: column;
+	gap: 4px;
+	align-self: stretch;
+}
+
+.SystemOverview-widget-title {
+	color: rgba(33, 38, 46, 1);
+	font-size: 18px;
+	font-weight: 600;
+	line-height: 28px;
+	margin: 0;
+}
+
+.SystemOverview-widget-desc {
+	color: rgba(81, 89, 103, 1);
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 20px;
+	margin: 0;
 }
