--- a/src/Views/SystemOverview/SystemOverview.module.scss
+++ b/src/Views/SystemOverview/SystemOverview.module.scss
@@ -70,22 +70,7 @@
 	}
 
 	&::-webkit-scrollbar {
-		width: 3px;
-	}
-
-	&::-webkit-scrollbar-track {
-		background-color: #f0f0f0;
-		border-radius: 4px;
-	}
-
-	&::-webkit-scrollbar-thumb {
-		background-color: rgba(52, 120, 246, 0.5);
-		border-radius: 4px;
-		box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
-	}
-
-	&::-webkit-scrollbar-thumb:hover {
-		background-color: rgba(20, 89, 219, 0.5);
+		width: 0px;
 	}
 }
 
@@ -134,10 +119,46 @@
 	}
 }
 
-.SystemOverview-title {
+.SystemOverview-head {
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
+}
+
+.SystemOverview-back {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	gap: 4px;
+	padding: 2px 0;
+
+	color: #3b8df5;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 20px;
+	transition: all 0.3s ease;
+
+	svg {
+		transition: all 0.3s ease;
+		path {
+			transition: all 0.3s ease;
+			fill: rgba(59, 141, 245, 1);
+		}
+	}
+
+	&:hover {
+		color: #1158ad;
+		svg {
+			transition: all 0.3s ease;
+			transform: scale(1.2);
+			transform-origin: right;
+
+			path {
+				transition: all 0.3s ease;
+				fill: #1158ad;
+			}
+		}
+	}
 }
 
 .SystemOverview-title {
